--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,8 @@ alembic = "^1.16.1"
 pydantic = "^2.11.5"
 python-dotenv = "^1.1.0"
 psycopg2-binary = "^2.9.10"
+python-telegram-bot = "^22.1"
+httpx = "^0.28.1"
 
 
 [tool.poetry.group.dev.dependencies]
