--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ python-dotenv = "^1.1.0"
 psycopg2-binary = "^2.9.10"
 python-telegram-bot = "^22.1"
 httpx = "^0.28.1"
+pytz = "^2025.2"
 
 
 [tool.poetry.group.dev.dependencies]
