--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ python-telegram-bot = "^22.1"
 httpx = "^0.28.1"
 pytz = "^2025.2"
 telegram = "^0.0.1"
+google-generativeai = "^0.8.5"
 
 
 [tool.poetry.group.dev.dependencies]
