--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ httpx = "^0.28.1"
 pytz = "^2025.2"
 telegram = "^0.0.1"
 google-generativeai = "^0.8.5"
+google = "^3.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
