--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ pytz = "^2025.2"
 telegram = "^0.0.1"
 google-generativeai = "^0.8.5"
 google = "^3.0.0"
+google-genai = "^1.21.1"
 
 
 [tool.poetry.group.dev.dependencies]
